--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ body {
     background-clip: content-box;
     display: grid;
     place-items: center;
+    animation: biclycleAnim 5s infinite linear;
+}
+
+@keyframes biclycleAnim {
+    0% {
+        transform: rotateZ(0);
+    }
+
+    100% {
+        transform: rotateZ(-360deg);
+    }
 }
 
 .wheel::after {
@@ -213,6 +224,7 @@ body {
     left: 40rem;
     border: .3rem dashed #000;
     background-clip: content-box;
+    animation: biclycleAnim 10s infinite linear;
 }
 
 .pedals {
@@ -223,6 +235,7 @@ body {
     left: 44rem;
     transform: rotateZ(-12deg);
     border-radius: .5rem;
+    animation: biclycleAnim 10s infinite linear;
 }
 
 .pedals::before,
@@ -234,6 +247,7 @@ body {
     position: absolute;
     left: -1.8rem;
     border-radius: .3rem;
+    animation: biclycleAnim 10s infinite linear reverse;
 }
 
 .pedals::before {
